welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.code
def tag(i:Int){
  ecritMessage(i)
}

override def run() {
  var nb=0
  var x=0
  for(y<-0 to getMondeHauteur()-1){
    setPos(0,y)
    tag(nb)
    nb=nb+1
    x=0
    while(y>0 && x<getMondeLargeur()-1){
      x=x+1
      y=y-1
      setPos(x, y)
      tag(nb)
      nb=nb+1
    }
  }
}